--- a/.hintrc
+++ b/.hintrc
@@ -7,7 +7,8 @@
     "axe/name-role-value": [
       "default",
       {
-        "link-name": "off"
+        "link-name": "off",
+        "button-name": "off"
       }
     ],
     "compat-api/css": [
@@ -27,6 +28,13 @@
       {
         "list": "off"
       }
-    ]
+    ],
+    "axe/parsing": [
+      "default",
+      {
+        "duplicate-id-aria": "off"
+      }
+    ],
+    "button-type": "off"
   }
 }
